--- a/b1621ry.html
+++ b/b1621ry.html
@@ -2,14 +2,31 @@
 <html lang="">
 <head>
     <meta charset="UTF-8">
-    <title>自己紹介ページ</title>
-	<meta name="Author" content=""/>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <title>Untitled Document</title>
+    <meta name="Author" content=""/>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <h1>enpit</h1>
+    <table>
+        <tr>
+            <td>名前</td>
+            <td>山田涼馬</td>
+        </tr>
+        <tr>
+            <td>所属</td>
+            <td>産業技術大学院大学創造技術専攻</td>
+        </tr>
+        <tr>
+            <td>学年</td>
+            <td>1年</td>
+        </tr>
+        <tr>
+            <td>Email</td>
+            <td>b1621ry@aiit.ac.jp</td>
+        </tr>
 
-<h1>山田涼馬</h1>
-
+    </table>
 </body>
 </html>
 
