--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <a href="b1621ry.html">山田涼馬</a>
-    <a href=".html"></a>
-    <a href=".html"></a>
-
-
-
+	<ul>
+    <li><a href="b1621ry.html">山田涼馬</a></li>
+    <li><a href="HirokiTakenaka.html">HirokiTakenaka.html</a></li>
+    <li><a href=".html"></a></li>
+    </ul>
 </body>
 </html>
 
