--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 	<ul>
     <li><a href="b1621ry.html">山田涼馬</a></li>
-    <li><a href="HirokiTakenaka.html">HirokiTakenaka.html</a></li>
-    <li><a href=".html"></a></li>
+    <li><a href="HirokiTakenaka.html">HirokiTakenaka</a></li>
+    <li><a href="NerimaRentai.html">NerimaRentai</a></li>
     </ul>
 </body>
 </html>
