--- a/HirokiTakenaka.html
+++ b/HirokiTakenaka.html
@@ -24,6 +24,10 @@
             <td>仕事</td>
             <td>中堅独立系SierでSEを5~6年</td>
         </tr>
+        <tr>
+            <td>趣味・好きなもの</td>
+            <td>音楽、ドラム、テニス、映画、ビール、ウイスキー</td>
+        </tr>
     </table>
   </body>
 </html>
