chenge index.html css link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Enpit</title>
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap-3.3.7-distcss/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap-3.3.7-distcss/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="bootstrap-3.3.7-dist/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
