--- a/HirokiTakenaka.html
+++ b/HirokiTakenaka.html
@@ -10,7 +10,7 @@
     <table>
         <tr>
             <td>名前</td>
-            <td>竹中裕紀</td>
+            <td>竹中裕紀（たけなかひろき）</td>
         </tr>
         <tr>
             <td>出身地</td>
