--- a/NerimaRentai.html
+++ b/NerimaRentai.html
@@ -1,10 +1,10 @@
 #2019/9/18
-
 <title>演習で使うぜー＾＾</title>
 <head>enPiT</head>
 
 <body>  
 <h1>自己紹介</h1>  
+<table>
     <tr>
         <td><h2>名前</h2></td>
         <td><h2>出身地</h2> </td>
@@ -21,7 +21,7 @@
         <p>経済産業省　応用情報技術者</p><br /></h2></td>
     </tr>
      
-
+</table>
         
 </body>  
 
