First Comment NAGASHIMA

--- a/IshidaHIRO.html
+++ b/IshidaHIRO.html
@@ -5,9 +5,9 @@
   <head>
     <meta http-equiv="content-type"
         content="text/html; charset=Shift_JIS" />
-    <title>はじめての XHTML 1.0</title>
+    <title>はじめての BASEBALL</title>
   </head>
   <body>
-    <p>こんにちは、 XHTML 1.0！</p>
+    <p>どうも、皆さん。長嶋茂雄です。</p>
   </body>
 </html>
