--- a/IshidaHIRO.html
+++ b/IshidaHIRO.html
@@ -1,13 +1,34 @@
-<?xml version="1.0" encoding="Shift_JIS" standalone="no"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ja">
+<html lang="">
   <head>
-    <meta http-equiv="content-type"
-        content="text/html; charset=Shift_JIS" />
-    <title>はじめての BASEBALL</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <title>IshidaHiroの自己紹介ページ</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+
   <body>
-    <p>どうも、皆さん。長嶋茂雄です。</p>
+    <h1>自己紹介</h1>
+    <table>
+        <tr>
+            <td>名前</td>
+            <td>石田弘之</td>
+        </tr>
+        <tr>
+            <td>出身地</td>
+            <td>群馬県前橋市</td>
+        </tr>
+        <tr>
+            <td>年齢</td>
+            <td>47歳</td>
+        </tr>
+        <tr>
+            <td>仕事</td>
+            <td>中堅独立系Sierで人事を1年</td>
+        </tr>
+        <tr>
+            <td>趣味・好きなもの</td>
+            <td></td>
+        </tr>
+    </table>
   </body>
 </html>
+
