--- a/HirokiTakenaka.html
+++ b/HirokiTakenaka.html
@@ -22,7 +22,12 @@
         </tr>
         <tr>
             <td>仕事</td>
-            <td>中堅独立系SierでSEを5~6年</td>
+            <td>中堅独立系SierでSEを5~6年。</td>
+            <td>ここ３年くらいは自動車メーカの情シスで社内SE</td>
+        </tr>
+        <tr>
+            <td>資格</td>
+            <td>DBスペシャリスト、応用情報、基本情報</td>
         </tr>
         <tr>
             <td>趣味・好きなもの</td>
